# source/B2CWebApi/Models/RequestWholesaleServicesMarketDocumentV2.cs
@@ -1,0 +1,40 @@
+﻿// Copyright 2020 Energinet DataHub A/S
+//
+// Licensed under the Apache License, Version 2.0 (the "License2");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Energinet.DataHub.EDI.B2CWebApi.Models;
+
+public record RequestWholesaleServicesMarketDocumentV2(
+    string SenderNumber,
+    string SenderRoleCode,
+    string ReceiverNumber,
+    string ReceiverRoleCode,
+    string BusinessReason,
+    string MessageType,
+    string MessageId,
+    string CreatedAt,
+    string? BusinessType,
+    IReadOnlyCollection<RequestWholesaleSettlementSeriesV2> Series);
+
+public record RequestWholesaleSettlementSeriesV2(
+    string Id,
+    string StartDateAndOrTimeDateTime,
+    string? EndDateAndOrTimeDateTime,
+    string? MeteringGridAreaDomainId,
+    string? EnergySupplierMarketParticipantId,
+    string? SettlementVersion,
+    string? Resolution,
+    string? ChargeOwner,
+    IReadOnlyCollection<RequestWholesaleSettlementChargeTypeV2> ChargeTypes);
+
+public sealed record RequestWholesaleSettlementChargeTypeV2(string? Id, string? Type);
